# ZlibBoost

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: config_f45.tcl  freepdk45.tcl
examples/freepdk45/: replace_mos.py  split.py
examples/freepdk45/netlist/: AND2X1.spi  AND2X2.spi  AOI21X1.spi  AOI22X1.spi  BUFX2.spi  BUFX4.spi  CLKBUF1.spi  CLKBUF2.spi  CLKBUF3.spi  DFFNEGX1.spi  DFFPOSX1.spi  DFFSR.spi  FAX1.spi  HAX1.spi  INVX1.spi  INVX2.spi  INVX4.spi  INVX8.spi  LATCH.spi  MUX2X1.spi  NAND2X1.spi  NAND3X1.spi  NOR2X1.spi  NOR3X1.spi  OAI21X1.spi  OAI22X1.spi  OR2X1.spi  OR2X2.spi  TBUFX1.spi  TBUFX2.spi  XNOR2X1.spi  XOR2X1.spi
parser/: CMakeLists.txt  README.md  lib_modify_api.cpp  lib_modify_api.hpp  lib_parser_api.cpp  lib_parser_api.hpp  python_binding.cpp
zlibboost/: __init__.py
zlibboost/arc_generation/: __init__.py
zlibboost/arc_generation/extractors/: __init__.py
zlibboost/cli/: main.py  pipeline.py
zlibboost/commands/: __init__.py
zlibboost/commands/characterization/: __init__.py  arc_handler.py  base_handler.py  cell_handler.py  function_handler.py  template_handler.py  waveform_handler.py
zlibboost/commands/config/: __init__.py
zlibboost/core/: __init__.py  exceptions.py  logger.py
zlibboost/core/config/: __init__.py  base.py  validator.py
zlibboost/database/: __init__.py  library_db.py
zlibboost/database/models/: __init__.py  cell.py  template.py  timing_arc.py  timing_arc_validator.py  waveform.py
zlibboost/parsers/: __init__.py  command_callbacks.py  command_registry.py  tcl_engine.py  unified_dispatcher.py  unified_parser.py
zlibboost/simulation/: iteration.py  polarity.py  runner.py
(+45 files in other folders)
