[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zlibboost"
version = "2.0.0"
description = "An open-source framework for standard cell library characterization."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "BSD 3-Clause License with Commercial Use Restriction" }
authors = [{ name = "ZlibBoost Team" }]
dependencies = [
    "numpy>=1.26",
    "ttable>=0.7.0",
]

[project.scripts]
zlibboost = "zlibboost.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["zlibboost*"]

[tool.setuptools.package-data]
"zlibboost.arc_generation" = ["*.pyc"]
"zlibboost.arc_generation.extractors" = ["*.pyc"]
